--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         <h3>Transform</h3>
         <div class="box"></div>
     </section>
+    <section class="animationSection">
+        <h3>Animation</h3>
+        <div class="box"></div>
+    </section>
 </body>
 </html>
