--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3>Transform</h3>
         <div class="box"></div>
     </section>
-    <section class="animationSection">
+    <section class="animationSection test">
         <h3>Animation</h3>
         <div class="box"></div>
     </section>
